# whitelist-browser

./: SPECIFICATION.md
.github/workflows/: tauri-desktop-release.yml
dora-desktop/: AGENTS.md  README.md  package.json  tailwind.config.ts  vite.config.ts
dora-desktop/src-tauri/: Cargo.toml  tauri.conf.json
dora-desktop/src-tauri/.cargo/: config.toml
dora-desktop/src-tauri/capabilities/: default.json
dora-desktop/src-tauri/icons/: icon.icns
dora-desktop/src-tauri/src/: lib.rs
dora-desktop/src/lib/: allowlist.test.ts  allowlist.ts  api.ts  appVersion.ts  deviceStorage.ts  proxyDisplay.ts  tauriBrowser.test.ts  tauriBrowser.ts  updater.ts
dora-desktop/src/routes/: +layout.svelte  +page.svelte
dora-desktop/src/routes/(private)/: +layout.svelte
dora-server/: .env.example  AGENTS.md  README.md  fly.toml  package.json  pnpm-lock.yaml
dora-server/src/: hooks.server.ts  hooks.ts
dora-server/src/lib/server/: crypto.test.ts  crypto.ts  email.ts  status.ts
dora-server/src/routes/: +layout.svelte  +page.svelte
whitelist-browser-desktop/: package.json  pnpm-lock.yaml  svelte.config.js
whitelist-browser-desktop/.github/workflows/: build.yml
whitelist-browser-desktop/src-tauri/: Cargo.toml  tauri.conf.json
whitelist-browser-desktop/src-tauri/capabilities/: browser-windows.json
whitelist-browser-desktop/src-tauri/src/: lib.rs
whitelist-browser-desktop/src/lib/: api.ts  deviceStorage.ts  proxyDisplay.test.ts  tauriBrowser.ts
whitelist-browser-desktop/src/routes/: +layout.svelte
whitelist-browser-server/: Dockerfile  fly.toml
(+72 files in other folders)
