[package]
name = "app"
version = "0.4.2"
description = "Dora"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
directories = "6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-proxy"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
whoami = "1.6.1"
regex = "1"
